# finance.zynqpricer.hls

./: .gitattributes  .gitignore  README.md
bitstream/: README.md  heston_ml_5x.json  heston_ml_5x.xls  heston_sl_3x.xls  heston_sl_6x.json  heston_sl_6x.xls
doc/: 2015-06-30_Xilinx_OpenHW_2015_Report.docx
doc/motivation hls/: HLS versus OpenCL.url
heston_sl/sw/: .gitignore  Makefile  heston_sl.cpp  heston_sl_acc.cpp  heston_sl_cpu.cpp  heston_sl_cpu.hpp  init_rng.cpp  iodev.hpp  json_helper.hpp  params.json  params_msvc.json  params_run.json  read_fifo.cpp  read_rng.cpp  run.sh  run_cpu.cpp  runner.hpp
heston_sl/sw/ziggurat/: gausszig_GSL.hpp
hls/: README.md
hls/antithetic/: README.md  antithetic_hls.cpp  antithetic_hls.hpp  antithetic_tb.cpp
hls/box_muller/: README.md  gauss_transform_hls.cpp  gauss_transform_hls.hpp  gauss_transform_tb.cpp
hls/dac_paper/call/: call_hls.cpp
hls/dac_paper/exponential/: exponential_hls.cpp
hls/dac_paper/stats/: stats_hls.cpp
hls/heston_kernel/: mt19937ar.cpp
hls/heston_kernel_ml/: README.md  heston_kernel_ml_hls.cpp  heston_kernel_ml_hls.hpp  heston_kernel_ml_tb.cpp  mt19937ar.h
hls/heston_kernel_sl/: README.md  heston_kernel_sl_hls.cpp  heston_kernel_sl_hls.hpp  heston_kernel_sl_tb.cpp
hls/icdf/: .gitignore  README.md  coeff_lut.hpp  icdf_fit.py  icdf_hls.cpp  icdf_hls.hpp  icdf_tb.cpp
hls/mersenne_twister_array/: README.md  infinite_stream_hls.cpp  infinite_stream_hls.hpp  infinite_stream_tb.cpp  mersenne_twister_array_hls.cpp  mersenne_twister_array_hls.hpp  mersenne_twister_array_tb.cpp
hls/mersenne_twister_streaming/: README.md  mersenne_twister_hls.cpp  mersenne_twister_hls.hpp  mersenne_twister_hls_tb.cpp  synth_tb.vhd  synth_tb_sim.vhd
hls/pricing/: pricing_hls.cpp
ip/: README.md
linux/: full_setup.mm
results/: heston_ml_comparison.xlsx  heston_sl_comparison.xlsx
results/2013.08.30_heston_sl_laptop/: output.txt  results.xlsx  results_laptop.xlsx  run_cpu.txt
results/2013.09.02_date_2011_sl_comparison/: review.xlsx
results/2013.09.02_heston_sl_desktop/: results_desktop.xlsx  run_cpu_sse2.txt
results/2013.09.02_heston_sl_tesla/: results_server.xlsx  run_cpu  run_cpu.txt
results/2013.09.02_heston_sl_zynq_3x/: params_acc_bench1.out  params_cpu_bench1.json  params_cpu_bench1.out  power.xlsx
results/2013.09.02_heston_sl_zynq_power/: power.xlsx
results/2013.09.02_reconfig_2011_sl_comparison/: review.xlsx
results/2013.09.03_heston_loc_comparison/: heston_loc.xlsx
results/2013.09.04_ressource_comparison/: ressources.xlsx
results/2013.09.07_heston_sl_zynq_6x/: params_acc_bench2.json  run_cpu_params_acc_bench1.txt
results/2013.09.29_eval_heston/: .gitignore
results/2013.09.29_eval_heston/benchmark_4/: 547793.out  547793_error.xlsx  549525.out  params.json  run_test.sh
results/2013.09.29_eval_heston/benchmark_4_std/: 548883.out  params.json  run_test.sh  submit.sh
results/2013.09.29_eval_heston/benchmark_4_zig_double/: 564509.out  run_test.sh
results/2013.10.10_feller_violation/: simulation.sh
results/2013.10.10_feller_violation/output/: params0000000000.json  params0000000000.json.0000000000.out  params0000000000.json.0000000001.out  params0000000000.json.0000000002.out  params0000000001.json  params0000000001.json.0000000000.out  params0000000001.json.0000000001.out  params0000000001.json.0000000002.out  params0000000002.json  params0000000002.json.0000000000.out  params0000000002.json.0000000001.out  params0000000002.json.0000000002.out  params0000000003.json  params0000000003.json.0000000000.out  params0000000003.json.0000000001.out  params0000000003.json.0000000002.out  params0000000004.json  params0000000004.json.0000000000.out  (+383 more)
results/2013.10.12_feller_violation_cluster_128_8/: .gitignore  build_eval.sh  feller_violation_resubmit_high_variance.py  simulation.sh
results/2013.11.23_performance_test_arm/: perf_test_2.txt  perf_test_3.txt
results/2013.11.25_dac_paper_params/: cpu_output_desktop.txt  cpu_output_laptop.txt  data.xlsx  params_dac_paper.json
results/2013.12.02_platform_ILP/: demo_runs.txt  gen_hyper_on_zynq_lpsolve.py  hyper_cost_model.py  hyper_on_zynq_7020_1.lp  hyper_on_zynq_7020_2.lp  hyper_on_zynq_7020_3.lp  hyper_on_zynq_7020_4.lp  hyper_on_zynq_7020_5.lp  interconnect.xlsx
results/2014.02.27_HyPER_loc_comparison/: lines of code.xlsx
results/2014.05.14_SL_ML_Comparison/: comparison.xlsx
software/: .gitignore  CMakeLists.txt  README.md  clean-zynq-build.sh  create-mingw-prj.bat  create-msvc11-prj.bat  ml_demo.sh  new-cluster-build.sh  new-unix-build.sh  nice2.json  observe_zc702.bat  observe_zc702_uart.bat  run_zynq_demo.sh
software/parameters/: nice.json  p1.json  p2.json  p3.json  params.json  params_acc_bench1.json  params_acc_bench2.json  params_cpu_bench1.json  params_msvc.json  params_zynq_demo.json  params_zynq_demo_acc.json  params_zynq_demo_both.json  params_zynq_demo_observe.json  params_zynq_demo_observe2.json  params_zynq_demo_observer_1.json  params_zynq_demo_observer_2.json
software/src/: CMakeLists.txt  eval_heston.cpp  eval_plot.py  feller_violation_analysis.py  feller_violation_analysis_cluster_job.py  feller_violation_analysis_cluster_submit.py  feller_violation_analysis_gaussian.py  heston_both_acc.cpp  heston_both_acc.hpp  heston_both_cpu.cpp  heston_both_cpu.hpp  heston_common.cpp  heston_common.hpp  heston_ml_acc.cpp  heston_ml_acc.hpp  heston_ml_both.cpp  heston_ml_both.hpp  heston_ml_cpu.cpp  heston_ml_cpu.hpp  heston_sl_acc.cpp  heston_sl_acc.hpp  heston_sl_cpu.cpp  heston_sl_cpu.hpp  heston_types.hpp  init_rng.cpp  iodev.cpp  iodev.hpp  json_helper.cpp  json_helper.hpp  observe_board.py  observer.cpp  observer.hpp  perf_test.cpp  read_fifo.cpp  read_heston.cpp  read_rng.cpp  run_acc.cpp  run_both.cpp  run_cpu.cpp  run_heston.cpp  (+2 more)
sw/: .gitignore  CMakeLists.txt  clean-zynq-build.sh  heston_sl_acc.cpp  heston_sl_cpu.cpp  iodev.hpp  read_rng.cpp  run.sh  run_both.cpp
sw/buildsys/: shared.cmake
sw/src/: heston_sl_acc.hpp  init_rng.cpp  iodev.cpp  json_helper.cpp  json_helper.hpp  read_rng.cpp  runner.cpp  runner.hpp
(+1402 files in other folders)
